# mcps

./: .gitignore  LICENSE  README.md
evernote-mcp/: README.md  pyproject.toml
evernote-mcp/evernote_mcp/: server.py
trello-mcp/: README.md  pyproject.toml
trello-mcp/trello_mcp/: server.py
