[project]
name = "evernote-mcp"
version = "0.2.0"
description = "MCP server providing read access to Evernote notes via exported .enex files"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.scripts]
evernote-mcp = "evernote_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
