[project]
name = "trello-mcp"
version = "0.1.0"
description = "MCP server for reading and writing Trello boards, lists, and cards"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
trello-mcp = "trello_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
